<resources>
    <string name="app_name">Asteroids</string>
    <string name="start">START</string>
    <string name="settings">SETTINGS</string>
    <string name="credits">CREDITS</string>
    <string name="scores">SCORES</string>

    <string-array name="difficulty_entry">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>

    <string-array name="difficulty_value">
        <item>easy</item>
        <item>medium</item>
        <item>hard</item>
    </string-array>

    <string name="preferences_file">com.alyx.asteroids_preferences</string>
    <string name="music_key">music</string>
</resources>