<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dp"
    android:background="@drawable/bg_1"
    android:backgroundTintMode="screen"
    android:backgroundTint="#104251"
    tools:context=".MainActivity">

    <TextView
        android:textColor="@color/white"
        android:textStyle="bold"
        android:id="@+id/game_title"
        android:textAllCaps="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="25sp" />

    <com.alyx.asteroids.graphics.AsteroidsButton
        android:id="@+id/Button1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:text="@string/start"
        app:color="@color/space"
        />

    <com.alyx.asteroids.graphics.AsteroidsButton
        app:color="@color/space"
        android:id="@+id/Button2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:text="@string/settings" />

    <com.alyx.asteroids.graphics.AsteroidsButton
        app:color="@color/space"
        android:id="@+id/Button3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:text="@string/credits" />

    <com.alyx.asteroids.graphics.AsteroidsButton
        app:color="@color/space"
        android:id="@+id/Button4"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:text="@string/scores" />

</LinearLayout>